--- a/_publications/2024-04-01-M3ARL.md
+++ b/_publications/2024-04-01-M3ARL.md
@@ -1,7 +1,7 @@
 ---
 title: "M^3ARL: Moment-Embedded Mean-Field Multi-Agent Reinforcement Learning for Continuous Action Space"
 collection: publications
-category: manuscripts
+category: conferences
 permalink: /publication/2024-04-01-MARL
 excerpt: 'This paper is about the repesentation of mean-field in continuous action space. '
 date: 2024-04-01
