--- a/_talks/2023-10-01-IROS.md
+++ b/_talks/2023-10-01-IROS.md
@@ -1,5 +1,5 @@
 ---
-title: "Conference Proceeding talk on Relevant Topic in Your Field"
+title: "Conference Proceeding talk at IROS 2024"
 collection: talks
 type: "Conference proceedings talk"
 permalink: /talks/2023-10-01-IROS
